--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <section id="menu">
             <!-- Menu items will be dynamically generated here -->
+            <!-- Menu items will be dynamically generated here <h2>Starter</h2>-->
         </section>
         <section id="order">
             <h2>Your Order</h2>
