--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
     <main>
         <section id="menu">
             <!-- Menu items will be dynamically generated here -->
-            <!-- Menu items will be dynamically generated here <h2>Starter</h2>-->
+            <!-- <h2>Starter</h2>-->
         </section>
         <section id="order">
             <h2>Your Order</h2>
             <ul id="order-items">
                 <!-- Order items will be displayed here -->
             </ul>
-            <p>Total: R<span id="order-total">0.00</span></p>
+            <div class="total">
+                <p>Total: R<span id="order-total">0.00</span></p>
+            </div>
+            
         </section>
     </main>
     <footer>
